[package]
name = "zigzag-bots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.5", features = ["derive"] }
flexi_logger = "0.22.3"
hex = "0.4.3"
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
zksync = { path = "../zksync/sdk/zksync-rs" }
zksync_eth_signer = { path = "../zksync/core/lib/eth_signer" }
