[package]
name = "zigzag-bots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-tungstenite = { version = "0.17.2", features = ["tokio-native-tls"] }
clap = { version = "3.2.5", features = ["derive"] }
flexi_logger = "0.22.3"
futures = "0.3.21"
hex = "0.4.3"
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
serde_tuple = "0.5.0"

# zksync = { path = "../zksync/sdk/zksync-rs" }
# zksync_eth_signer = { path = "../zksync/core/lib/eth_signer" }
zksync = { git = "https://github.com/wakabat/zksync", rev = "33b56a3" }
zksync_eth_signer = { git = "https://github.com/wakabat/zksync", rev = "33b56a3" }

[dev-dependencies]
assert_float_eq = "1.1.3"
strum = "0.24.1"
strum_macros = "0.24"
